[workspace]
resolver = "2"
members = [
    "crates/wlcontrol-core",
    "crates/wlcontrol-d2b",
    "crates/wlcontrol-waybar",
    "crates/wlcontrol-ui",
    "crates/wlcontrol-cli",
]

[workspace.package]
version = "2.0.0"
edition = "2021"
rust-version = "1.94"
license = "Apache-2.0"
repository = "https://github.com/vicondoa/d2b-wlcontrol"
authors = ["vicondoa"]

[workspace.dependencies]
# Internal crates
wlcontrol-core = { path = "crates/wlcontrol-core" }
wlcontrol-d2b = { path = "crates/wlcontrol-d2b" }

# Canonical client distribution and presentation-only helpers.
d2b-client-toolkit = { path = "../d2b-client-toolkit/crates/d2b-client-toolkit", version = "=2.0.0" }
d2b-client-toolkit-colors = { path = "../d2b-client-toolkit/crates/d2b-client-toolkit-colors", version = "=2.0.0" }
d2b-client-toolkit-waybar = { path = "../d2b-client-toolkit/crates/d2b-client-toolkit-waybar", version = "=2.0.0" }

# Shared third-party dependencies. Versions are pinned at the workspace
# level so every crate speaks the same serde / error surface.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"
png = "0.17"

clap = { version = "4", features = ["derive"] }
nix = { version = "0.29", features = ["socket", "uio"] }
directories = "5"

[workspace.metadata.d2b-client-toolkit]
version = "2.0.0"
revision = "d1c136a4ad68d53674b4a87bd3d5d4664e14214d"
d2b-source-revision = "7e94327951d30913a1a6e0e7a47d4a24b462deff"
d2b-source-fingerprint = "0401d1f463d9dad49efd663d1493184e42954f624a029fbfd41c49f0323e5708"

[profile.release]
opt-level = 2
lto = "thin"
strip = true
