[workspace]
resolver = "2"
members = [
    "crates/wlcontrol-core",
    "crates/wlcontrol-d2b",
    "crates/wlcontrol-waybar",
    "crates/wlcontrol-ui",
    "crates/wlcontrol-cli",
]

[workspace.package]
version = "2.0.0"
edition = "2021"
rust-version = "1.94"
license = "Apache-2.0"
repository = "https://github.com/vicondoa/d2b-wlcontrol"
authors = ["vicondoa"]

[workspace.dependencies]
# Internal crates
wlcontrol-core = { path = "crates/wlcontrol-core" }
wlcontrol-d2b = { path = "crates/wlcontrol-d2b" }

# Canonical client distribution and presentation-only helpers, pinned to the
# exact toolkit revision (see [workspace.metadata.d2b-client-toolkit] below).
# These are Cargo git dependencies, not adjacent workspace path dependencies:
# a plain checkout of this repository builds hermetically without a sibling
# `d2b-client-toolkit` checkout on disk.
d2b-client-toolkit = { git = "https://github.com/vicondoa/d2b-toolkit", rev = "926de54e7320599c373524a10b65aaf13b6ff422", features = ["host-socket"] }
d2b-client-toolkit-colors = { git = "https://github.com/vicondoa/d2b-toolkit", rev = "926de54e7320599c373524a10b65aaf13b6ff422" }
d2b-client-toolkit-waybar = { git = "https://github.com/vicondoa/d2b-toolkit", rev = "926de54e7320599c373524a10b65aaf13b6ff422" }

# Shared third-party dependencies. Versions are pinned at the workspace
# level so every crate speaks the same serde / error surface.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"
png = "0.17"

clap = { version = "4", features = ["derive"] }
nix = { version = "0.29", features = ["socket", "uio", "user", "poll"] }
directories = "5"
sha2 = "0.10"
tokio = { version = "1", features = ["net", "rt", "time"] }

[workspace.metadata.d2b-client-toolkit]
version = "2.0.0"
revision = "926de54e7320599c373524a10b65aaf13b6ff422"
d2b-source-revision = "9dc902243cdd7aba7ef269988b96f0aae6e037da"
d2b-source-fingerprint = "5a20cef3a64281df819eeb76bdfe385999755479b467b559653011582fb9c043"
inventory-revision = "9dc902243cdd7aba7ef269988b96f0aae6e037da"
inventory-sha256 = "35c33c2e23e1b9f03b5abc3bbca2d3320e38c42dfc7aceb7e3476d28210cde8c"

[profile.release]
opt-level = 2
lto = "thin"
strip = true
