[package]
name = "wlcontrol-d2b"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Canonical d2b client adapter boundary for d2b-wlcontrol."

[dependencies]
wlcontrol-core.workspace = true
d2b-client-toolkit.workspace = true
nix.workspace = true
sha2.workspace = true
tokio.workspace = true
